# fmtm

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release-plz.yml  rust.yml
src/: lib.rs  main.rs  paragraph_formatter.rs  tests.rs
src/tests/: format.rs  gpt1.md  gpt_inline.md
src/tests/snapshots/: fmtm__tests__format__display_math_in_nested_list-2.snap  fmtm__tests__format__display_math_in_nested_list-3.snap  fmtm__tests__format__display_math_in_nested_list.snap  fmtm__tests__format__gpt1-2.snap  fmtm__tests__format__gpt1-3.snap  fmtm__tests__format__gpt1.snap  fmtm__tests__format__gpt_inline-2.snap  fmtm__tests__format__gpt_inline-3.snap  fmtm__tests__format__gpt_inline.snap  fmtm__tests__format__hard_breaks-2.snap  fmtm__tests__format__hard_breaks-3.snap  fmtm__tests__format__hard_breaks.snap  fmtm__tests__format__list_item_start_on_same_line-2.snap  fmtm__tests__format__list_item_start_on_same_line-3.snap  fmtm__tests__format__list_item_start_on_same_line.snap  fmtm__tests__format__panicked_when_seperator_after_link-2.snap  fmtm__tests__format__panicked_when_seperator_after_link-3.snap  fmtm__tests__format__panicked_when_seperator_after_link.snap  fmtm__tests__format__pulldown_cmark_specs_math-2.snap  fmtm__tests__format__pulldown_cmark_specs_math-3.snap  fmtm__tests__format__pulldown_cmark_specs_math.snap  fmtm__tests__format__yaml_header_then_comment-2.snap  fmtm__tests__format__yaml_header_then_comment-3.snap  fmtm__tests__format__yaml_header_then_comment.snap
